...
    @Published var showNotEnoughtCreditsAlert: Bool = false
    @Published var showSuccessfulTransactionAlert: Bool = false
    @Published var showEllipsis: Bool = false
    
    var fillAllFieldsAlert = AlertAppleMusic17View(title: "Заполните все поля", subtitle: nil, icon: .error)
    var notEnoughCreditsAlert = AlertAppleMusic17View(title: "Недостаточно средств", subtitle: nil, icon: .error)
    var successfulTransactionAlert = AlertAppleMusic17View(title: "Успешная транзакция", subtitle: nil, icon: .done)
    
    var categories: [String] = ["Продукты", "Банковский перевод", "Шоппинг", "Другое"]
    
    private let transactionService: TransactionServiceProtocol
    private var cancellables = Set<AnyCancellable>()
    
    init(cardsViewModel: CardsViewModel, transactionService: TransactionServiceProtocol) {
        self.transactionService = transactionService
...
